--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,6 @@
 <h1>KarmaVille's Most Famous</h1>
+<%= will_paginate @users %>
+
 <table class="table table-bordered table-striped">
   <tr>
     <th>Karma</th>
@@ -10,3 +12,5 @@
     <%= render 'user_row', :user => user %>
   <% end %>
 </table>
+
+<%= will_paginate @users %>
